Update wedding date and related information across multiple files

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <p class="guest-name" data-i18n="guestName">Quý Khách</p>
                         <p class="to-wedding" data-i18n="invitation.toOurWedding">đến dự hôn lễ của</p>
                         <h2 class="letter-names" data-i18n="names.coupleNames">Công Hậu &amp; Ngọc Thi</h2>
-                        <p class="letter-date" data-i18n="invitation.letterDate">30.11.2025</p>
+                        <p class="letter-date" data-i18n="invitation.letterDate">29.11.2025</p>
                     </div>
                 </div>
             </div>
@@ -130,7 +130,7 @@
                         <div class="wedding-info-brief">
                             <div class="info-item">
                                 <i class="far fa-calendar-alt"></i>
-                                <span data-i18n="invitation.weddingDate">Chủ Nhật, 30 Tháng 11, 2025</span>
+                                <span data-i18n="invitation.weddingDate">Thứ Bảy, 29 Tháng 11, 2025</span>
                             </div>
                             <div class="info-item">
                                 <i class="far fa-clock"></i>
@@ -221,7 +221,7 @@
                 </h1>
                 <div class="wedding-date">
                     <i class="far fa-calendar-heart"></i>
-                    <p data-i18n="hero.date">30.11.2025</p>
+                    <p data-i18n="hero.date">29.11.2025</p>
                 </div>
             </div>
         </section>
@@ -304,7 +304,7 @@
                     </div>
                     <div class="timeline-item right animate-on-scroll">
                         <div class="timeline-content">
-                            <div class="timeline-date" data-i18n="timeline.wedding.date">30.11.2025</div>
+                            <div class="timeline-date" data-i18n="timeline.wedding.date">29.11.2025</div>
                             <h3 data-i18n="timeline.wedding.title">Đám cưới</h3>
                             <p data-i18n="timeline.wedding.description">Ngày chúng tôi chính thức nên duyên vợ chồng.</p>
                         </div>
@@ -417,15 +417,15 @@
                 <div class="gift-container">
                     <div class="bank-card animate-on-scroll">
                         <div class="bank-details">
-                            <p class="bank-name"><span style="display: none;" data-i18n="gift.bank"></span> <strong data-i18n="gift.bankNameBride">Vietcombank</strong></p>
-                            <p class="bank-account"><strong data-i18n="gift.accountBride">103 6060 991</strong></p>
-                            <p class="bank-owner"><strong data-i18n="gift.accountHolderBride">PHAN CONG  HAU</strong></p>
+                            <p class="bank-name"><span style="display: none;" data-i18n="gift.bank"></span> <strong data-i18n="gift.bankNameBride">Techcombank</strong></p>
+                            <p class="bank-account"><strong data-i18n="gift.accountBride">4863 2626 26</strong></p>
+                            <p class="bank-owner"><strong data-i18n="gift.accountHolderBride">NGUYEN NGOC THI</strong></p>
                         </div>
                         <div class="qr-code">
                             <img src="./assets/qr-bride.png" alt="QR Code" />
                             <p class="qr-label" data-i18n="gift.qrLabel">Quét mã để gửi quà</p>
                         </div>
-                        <button class="copy-btn" onclick="copyBankInfo('1036060991')">
+                        <button class="copy-btn" onclick="copyBankInfo('4863262626')">
                             <i class="fas fa-copy"></i> <span data-i18n="gift.copyButton">Sao chép</span>
                         </button>
                     </div>
