Update Google Maps embed URL and link in the venue section

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                                 <i class="far fa-clock"></i>
                                 <span data-i18n="venue.time"></span>
                             </p>
-                            <a href="https://maps.app.goo.gl/WZgGbsyEHgNUEd8p6" target="_blank" class="btn btn-map">
+                            <a href="https://maps.app.goo.gl/ZHV8kAs4Yni9YkhV6" target="_blank" class="btn btn-map">
                                 <i class="fas fa-directions"></i> <span data-i18n="venue.viewMap">Xem bản đồ</span>
                             </a>
                         </div>
