Update Open Graph and Twitter image URLs to the correct path

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Thiệp Cưới Công Hậu &amp; Ngọc Thi" />
     <meta property="og:locale" content="vi_VN" />
-    <meta property="og:image" content="https://cong-hau-ngoc-thi.vercel.app/assets/2.jpg" />
+    <meta property="og:image" content="https://ngoc-thi.vercel.app/assets/2.jpg" />
     <meta property="og:image:alt" content="Thiệp cưới của Công Hậu và Ngọc Thi" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Thiệp Cưới Công Hậu &amp; Ngọc Thi" />
     <meta name="twitter:description" content="Thiệp cưới online của Công Hậu &amp; Ngọc Thi tại TP.HCM - hãy xác nhận tham dự!" />
-    <meta name="twitter:image" content="https://cong-hau-ngoc-thi.vercel.app/assets/2.jpg" />
+    <meta name="twitter:image" content="https://ngoc-thi.vercel.app/assets/2.jpg" />
     <link rel="icon" type="image/png" href="./assets/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
